# game

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Doxyfile  analyze.sh  build.zig  build.zig.zon
editor/: CMakeLists.txt  build.zig  build.zig.zon
editor/src/: CMakeLists.txt  entry.c  main.zig
engine/: CMakeLists.txt  build.zig  build.zig.zon
engine/src/: CMakeLists.txt  defines.c  defines.h  entry.c  entry.h  entry.zig
engine/src/containers/: CMakeLists.txt  bintree.c  bintree.h  dynarray.c  dynarray.h
engine/src/core/: CMakeLists.txt  application.c  application.h  assert.h  event.c  event.h  game.h  input.c  input.h  log.zig  logger.c  logger.h  memory.c  memory.h
engine/src/graphics/: framebuffer.zig  graphics_context.zig  swapchain.zig  vulkan_context.zig
engine/src/platform/: CMakeLists.txt  linux.zig  platform.h  platform.zig  platform_linux.c  platform_windows.c
engine/src/renderer/: CMakeLists.txt  renderer_backend.c  renderer_backend.h
engine/src/renderer/vulkan/: CMakeLists.txt  vulkan_backend.c  vulkan_backend.h
engine/src/utils/: CMakeLists.txt  string.c  string.h
lib/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/zglfw/src/: zglfw.zig
resources/: main.lua  other.lua  test.lua  test.shader
shaders/: CMakeLists.txt  test.frag  test.vert  vs_basic.sc
src/: CMakeLists.txt  constructors.hpp  game.zig  log.zig  logging.cpp  logging.hpp  main.cpp  main.rs  main.zig  pch.hpp  platform.cpp  platform.hpp
src/engine/: CMakeLists.txt  debug.cpp  debug.hpp  event.cpp  event.hpp  keycodes.hpp  lua.cpp  lua.hpp  sprite.cpp  sprite.hpp
src/gfx/: CMakeLists.txt  array.cpp  array.hpp  bgfx.hpp  buffer.cpp  buffer.hpp  opengl.hpp  render_backend.hpp  renderer.cpp  renderer.hpp  sdl.hpp  shader.cpp  shader.hpp  window.cpp  window.hpp
src/graphics/: context.zig  mod.rs  shader.zig  swapchain.zig
src/graphics/renderer_backends/: vulkan.rs
src/graphics/window_backends/: glfw.rs
src/math/: CMakeLists.txt  floats.cpp  floats.hpp  mat4.cpp  mat4.hpp  mod.rs  vec2.cpp  vec2.hpp  vec2.rs  vec3.cpp  vec3.hpp  vec3.rs
src/platform/: platform.zig
src/renderer/: Renderer.zig  renderer.zig
src/renderer/vulkan/: vulkan.zig
src/resource/: CMakeLists.txt  lua_source.cpp  lua_source.hpp  resource.hpp  resource_manager.hpp  shader.cpp  shader.hpp
src/window/: backend.rs  glfw.rs  mod.rs
